<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeviceSpoofLabs-Hooks</string>
    <string name="app_title">Device Spoof Labs</string>
    <string name="xposed_description">Standalone LSPosed module for runtime device, identifier, WebView, and native property spoofing.</string>
    <string name="select_all_label">Enable all</string>
    <string name="android_version_label">Android version</string>
    <string name="android_version_decrement">−</string>
    <string name="android_version_increment">+</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit">Edit</string>
    <string name="action_randomize">Randomize</string>
    <string name="action_randomize_all">Randomize all</string>
    <string name="copied_toast">Copied to clipboard</string>
    <string name="edit_dialog_title">Edit %1$s</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="invalid_value">Value doesn\'t match expected format</string>
    <string name="save_failed">Failed to save: %1$s</string>
    <string name="timezone_label">Timezone</string>
    <string name="timezone_dialog_title">Select timezone</string>
    <string name="language_label">Language</string>
    <string name="language_dialog_title">Select language</string>
    <string name="display_spoof_label">Spoof screen size</string>
    <string name="display_spoof_summary">May break app layouts. Restart target apps.</string>
    <string name="advanced_label">Advanced</string>
    <string name="native_props_label">Native property spoofing</string>
    <string name="native_props_summary">Also covers properties an app reads from its own native code. Restart target apps.</string>
    <string name="hide_accounts_label">Hide accounts</string>
    <string name="hide_accounts_summary">Apps see no accounts on the device.</string>
    <string name="verbose_label">Verbose logging</string>
    <string name="verbose_summary">Writes hook status lines to the LSPosed log.</string>
    <string name="search_hint">Search…</string>
    <string name="device_label">Device</string>
    <string name="action_choose_preset">Choose preset</string>
    <string name="device_preset_dialog_title">Choose device</string>
    <string name="device_edit_title">Edit device</string>
    <string name="device_field_brand">Brand</string>
    <string name="device_field_manufacturer">Manufacturer</string>
    <string name="device_field_model">Model</string>
    <string name="device_field_name">Product name</string>
    <string name="device_field_device">Device codename</string>
    <string name="device_field_board">Board</string>
    <string name="device_field_hardware">Hardware</string>
    <string name="device_field_platform">Platform</string>
    <string name="device_field_build_id">Build ID</string>
    <string name="device_field_incremental">Build incremental</string>
    <string name="device_field_security_patch">Security patch</string>
    <string name="device_field_fingerprint">Fingerprint (blank = auto)</string>
</resources>
